<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="isCallActive"
            type="Boolean" />
        <variable
            name="itemClick"
            type="com.vdotok.japp.userlisting.adapter.SelectUserContactAdapter.OnItemClickListener" />

        <variable
            name="isGroupUsersList"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/groupView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
        android:id="@+id/groupInitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/user_icon"
        android:gravity="center"
        android:src="@drawable/ic_user_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/groupTitle"
            style="@style/Theme_TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="12dp"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_green"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/groupInitial"
            app:layout_constraintStart_toEndOf="@+id/groupInitial"
            app:layout_constraintTop_toTopOf="@id/groupInitial"
            tools:text="Fajar Amjad Saeed Chishty" />

        <ImageView
            android:id="@+id/call_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/call_icon_description"
            android:padding="12dp"
            android:clickable="@{isCallActive? false : true, default = true}"
            android:src="@{isCallActive? @drawable/ic_call_disable : @drawable/ic_call_icon, default = @drawable/ic_call_icon}"
            app:layout_constraintBottom_toBottomOf="@+id/video_icon"
            app:layout_constraintEnd_toStartOf="@+id/video_icon"
            app:layout_constraintTop_toTopOf="@+id/video_icon" />

        <ImageView
            android:id="@+id/video_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/video_call_icon_description"
            android:padding="12dp"
            android:clickable="@{isCallActive? false : true, default = true}"
            android:src="@{isCallActive? @drawable/ic_video_call_disable : @drawable/ic_video_call, default = @drawable/ic_video_call}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/chat_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/chat_icon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:contentDescription="@string/chat_icon_description"
            android:padding="12dp"
            android:src="@drawable/ic_chat_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_user_selected"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/ic_checked"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/check_user" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:background="@color/tile_green_whitish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groupTitle" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/callChatActionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{isGroupUsersList? View.GONE : View.VISIBLE, default = visible}"
            app:constraint_referenced_ids="call_icon, chat_icon, video_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>